test/language/errors/errors_use.hm
# @exception import can't use integer (expected string)

use 1
